sumo/tests/duarouter/alternatives/style1_input/errors/route/route_cost_empty/routes.duarouter
<?xml version="1.0"?>

<!-- generated on 09/16/09 09:10:25 by SUMO duarouter Version dev-SVN-r7726
<configuration>

    <input
        net-file="input_net.net.xml"
        alternatives="input_alts.rou.alt.xml"
    />

    <output
        output-file="routes.rou.xml"
    />

</configuration>
-->

<routes>
   <vtype id="KRAUSS_DEFAULT" length="5.00" maxspeed="70.00" color="1.00,1.00,0.00">
      <carFollow-Krauss accel="2.60" decel="4.50" sigma="0.50"/>
   </vtype>
   <vehicle id="0" type="KRAUSS_DEFAULT" depart="0">
      <route edges="beg middle end rend"/>
   </vehicle>
</routes>
